Removed import * from __init__.py; Improved pep8 compliancy

--- a/README
+++ b/README
@@ -53,9 +53,10 @@ To Operate
 
 Start python from the command line.  Then::
 
-  >>> import ccad
-  >>> s1 = ccad.sphere(1.0)
-  >>> v1 = ccad.view()
+  >>> import ccad.model as cm
+  >>> import ccad.display as cd
+  >>> s1 = cm.sphere(1.0)
+  >>> v1 = cd.view()
   >>> v1.display(s1)
 
 You should see a sphere displayed in a window.
